--- a/HH/gtn.css
+++ b/HH/gtn.css
@@ -1,3 +1,3 @@
 body {
-    background: linear-gradient(to right, #d4fc79, #96e6a1);
+    background: linear-gradient(to right, #f00000, #1e0feb);
 }
