--- a/HH/guessthenumber.css
+++ b/HH/guessthenumber.css
@@ -1,9 +1,9 @@
 body {
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
-    background-color: #f0f8ff;
-    padding: 20px;
-}
+  padding: 20px;
+}   background-color: #f0f8ff;
+   
 
 header, footer {
    margin-bottom:20px ; 
@@ -21,4 +21,27 @@ input, button {
     padding: 10px;
     margin: 10px;
     font-size: 16px;
+}
+.nav {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: #dff0d8;
+    color: #333;
+    font-weight: bold;
+}
+.nav2 {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: #dff0d8;
+    color: #333;
+    font-weight: bold;
+}
+.text {
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    display: inline-block;
+    box-shadow: 0 0 10px;
 }
